--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.5",
     "bcryptjs": "^2.4.3",
+    "fontawesome": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
