--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.5",
     "bcryptjs": "^2.4.3",
     "fontawesome": "^5.6.3",
+    "jose": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
